--- a/configure.ac
+++ b/configure.ac
@@ -1,28 +1,10 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ([2.69])
-AC_INIT([libeot], [0.0], [brennanv@email.arizona.edu])
-AM_INIT_AUTOMAKE(libeot, 0.0)
-AC_OUTPUT(Makefile src/Makefile)
-AC_CONFIG_SRCDIR([src/eot2ttf.c])
-
-# Checks for programs.
+AC_INIT([libeot],[0.000],[brennanv@email.arizona.edu])
+AM_INIT_AUTOMAKE([foreign -Wall -Werror])
+: ${CFLAGS="--std=c99"}
 AC_PROG_CC
-
-# Checks for libraries.
-
-# Checks for header files.
-AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h])
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_CHECK_HEADER_STDBOOL
-AC_TYPE_UINT16_T
-AC_TYPE_UINT32_T
-AC_TYPE_UINT8_T
-
-# Checks for library functions.
-AC_FUNC_MALLOC
-AC_FUNC_MMAP
-
+AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
